manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    author: UD
    os: linux
    baseImage: registry
    containerPort: "5000"
  name: registry
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  selector:
    matchLabels:
       name: registry
  revisionHistoryLimit: 10
  minReadySeconds: 10
  template:
    metadata:
      labels:
       name: registry
    spec:
      containers:
        - name: registry
          image: registry:2
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /
              port: 5000
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 5000
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          resources:
             limits:
               cpu: 100m
               memory: 300Mi
             requests:
               cpu: 50m
               memory: 150Mi
