manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: registry-service
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5000
  selector:
       name: registry
  # type: LoadBalancer
