manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ingress
spec:
  ingressClassName: registry
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: registry-service
              port:
                number: 80
